--- a/My Portfolio/spacecord full.html
+++ b/My Portfolio/spacecord full.html
@@ -38,10 +38,8 @@
             </div>
             <div class="about-col-2">
             <h1 class="sub-title">About Me</h1>
-            <p> addwf efekmf fe fwfnf ddwd dwdwqdqd qqdqdd dd dddddw 
-                fwffeeg wfegg errgeg svhvejgb dbkqndkw wbdjwbf 
-                knkng keiof wdwfwwe wewefgeg fernnlnlg rri2rhbev fnv dnvs 
-                fawq gngf;meg  efegrrmmljobjd feegrrh  rhrhgg rgrnntnt nfefq    
+            <p> I am pursuing my Bachelor's degree in Mechanical Engineering from Natonal Institute of Technology, Tiruchirappalli.
+                I am highly interested in coding.    
             </p>
             
             <div class="tab-titles">
@@ -84,16 +82,14 @@
             <div>
                 <i class="fa-solid fa-spider-web"></i>
                 <h2>Web Developer</h2>
-                <p>adia ndjkqnwd sdiq na nadvah ddh qbhbi ojslkc nskNS nsjn ks c pquijcnx jnsjcnjnc ncxn xdbuwdu ccdjnvjvn
-                    dd jsn smc mznjb sisqoq phheu ddmmqd mcbhwj eqhiuhi bcvh  duhcb bc owuqu jansvhv bjsjv bc  hddiahdo oho
+                <p>I like developing websites. I like working on new projects and interacting wih new people.
                 </p>
                 <a href="#">learn more</a>
             </div>
             <div>
                 <i class="fa-solid fa-code"></i>
                 <h2>Competitive Programmer</h2>
-                <p>adia ndjkqnwd sdiq na nadvah ddh qbhbi ojslkc nskNS nsjn ks c pquijcnx jnsjcnjnc ncxn xdbuwdu ccdjnvjvn
-                    dd jsn smc mznjb sisqoq phheu ddmmqd mcbhwj eqhiuhi bcvh  duhcb bc owuqu jansvhv bjsjv bc  hddiahdo oho
+                <p>I like solving DSA questions and also like  competitive programming.
                 </p>
                 <a href="#">learn more</a>
             </div>
